<resources>
    <string name="app_name">Quero Ajudar!</string>
    <string name="start_btn_register">Começar a ajudar</string>
    <string name="start_btn_login">Já tenho uma conta</string>
    <string name="login_tv_hint">Insira seus dados de login</string>
    <string name="login_btn_enter">Entrar</string>
    <string name="login_et_password">Senha</string>
    <string name="login_et_email">E-mail</string>
    <string name="login_btn_forgotPassword">Esqueci minha senha</string>
    <string name="fragment_register_edit_profile_label">Editar Perfil</string>
    <string name="register_tv_hint">Insira seus dados</string>
    <string name="register_et_name">Nome</string>
    <string name="register_et_lastName">Sobrenome</string>
    <string name="register_et_dateOfBirth">Data de nascimento</string>
    <string name="register_et_email">E-mail</string>
    <string name="register_et_password">Senha</string>
    <string name="register_et_passwordConfirm">Confime a senha</string>
    <string name="register_btn_register">Confirmar</string>
    <string name="register_success">Seu cadastro foi feito com sucesso</string>
    <string name="register_profile_edit_success">Suas informações foram alteradas com sucesso</string>
    <string name="fragment_vacancies_label">Vagas</string>
    <string name="vacancies_btn_filters">Filtros</string>
    <string name="vacancies_tv_orderBy">Ordernar por</string>
    <string name="vacancies_tv_filterBy">Filtrar por</string>
    <string name="vacancies_tv_cause">Causas beneficiadas</string>
    <string name="vacancies_tv_skill">Habilidades requeridas</string>
    <string name="vacancies_btn_recommended">Recomendadas</string>
    <string name="vacancies_btn_popular">Populares</string>
    <string name="vacancies_btn_recent">Recentes</string>
    <string name="vacancies_tv_rvVacanciesEmpty">Nenhuma vaga encontrada</string>
    <string name="fragment_favorites_label">Favoritos</string>
    <string name="favoriteVacancies_title">Vagas</string>
    <string name="favoriteOrganizations_title">Instituições</string>
    <string name="fragment_profile_label">Perfil</string>
    <string name="profile_btnEditProfile">Editar Perfil</string>
    <string name="profile_btnLogout">Sair</string>
    <string name="profile_tvLabelApplications">Inscrições</string>
    <string name="profile_tvLabelApplication">Inscrição</string>
    <string name="profile_tvLabelCauses">Minhas Causas</string>
    <string name="profile_tvLabelSkills">Minhas Habilidades</string>
    <string name="profile_tvCausesEmpty">Nenhuma causa adicionada</string>
    <string name="profile_tvSkillsEmpty">Nenhuma habilidade adicionada</string>
    <string name="fragment_vacancy_details_label">Vaga</string>
    <string name="vacancyDetails_by">por</string>
    <string name="vacancyDetails_tvLabelDescription">Descrição</string>
    <string name="vacancyDetails_tvLabelCauses">Causas</string>
    <string name="vacancyDetails_tvLabelSkills">Habilidades Necessárias</string>
    <string name="vacancyDetails_tvLabelFrequency">Frequência</string>
    <string name="vacancyDetails_tvLabelTimetable">Horário</string>
    <string name="vacancyDetails_tvLabelLocation">Local</string>
    <string name="vacancyDetails_tvLabelContact">Contato</string>
    <string name="vacancyDetails_btnApply"> Inscrever-se </string>
    <string name="vacancyDetails_btnApplyCancel"> Cancelar Inscrição </string>
    <string name="vacancyDetails_favorite_success">
        A vaga foi incluída em seus favoritos
    </string>
    <string name="vacancyDetails_unfavorite_success">
        A vaga foi removida de seus favoritos
    </string>
    <string name="vacancyDetails_favorite_error">
        Não foi possível incluir a vaga como favorito
    </string>
    <string name="fragment_organization_details_label">Instituição</string>
    <string name="organizationDetails_tabItemInfo">Informações</string>
    <string name="organizationDetails_tabItemVacancies">Vagas</string>
    <string name="organizationDetails_tvLabelCauses">Causas</string>
    <string name="organizationDetails_tvLabelContact">Contato</string>
    <string name="organizationDetails_tvLabelAbout">Sobre</string>
    <string name="organizationDetails_favorite_success">
        A instituição foi incluída em seus favoritos
    </string>
    <string name="organizationDetails_unfavorite_success">
        A instituição foi removida de seus favoritos
    </string>
    <string name="selectCategories_tvHintCauses">Selecione suas causas</string>
    <string name="selectCategories_tvHintSkills">Selecione suas habilidades</string>
    <string name="selectCategories_btnConfirm"> Confirmar </string>
    <string name="fragment_vacancy_application_label">Inscrição</string>
    <string name="vacancyApplication_tvTitle">Confirmação de Inscrição</string>
    <string name="vacancyApplication_tvTitleCancel">Cancelamento</string>
    <string name="vacancyApplication_tvInstructions">Ao confirmar sua inscrição a instituição responsável será notificada e receberá seus dados de contato. Insira-os nos campos abaixo. </string>
    <string name="vacancyApplication_tvInstructionsCancel">Você tem certeza de que deseja cancelar sua inscrição nessa vaga? A instituição responsável será notificada de seu cancelamento. </string>
    <string name="vacancyApplication_tvPhone">Telefone</string>
    <string name="vacancyApplication_tvEmail">E-mail</string>
    <string name="vacancyApplication_tvMessage">Mensagem para a instituição</string>
    <string name="vacancyApplication_btnConfirm">Confirmar</string>
    <string name="vacancyApplication_btnConfirmCancel">Confirmar Cancelamento</string>
    <string name="vacancyApplication_btnCancel">Voltar</string>
    <string name="vacancyApplication_applicationSent">Sua inscrição foi enviada com sucesso</string>
    <string name="item_vacancy_by">por</string>
    <string name="tv_networkInfo">Não foi possível carregar outras vagas.
        Verifique sua conexão ou tente novamente mais tarde.
    </string>
    <string name="tv_noItemInfo">Nenhum item encontrado
    </string>
    <string name="recommendedOrganizationsList_tv_organizations">Instituições</string>
    <string name="recommendedOrganizationsList_btn_seeAll">Ver Todas</string>
    <string name="networkStatus_tv_networkInfo">
        Você está offline. Verifique sua conexão.
    </string>
    <string name="networkStatus_btn_tryAgain">Tentar Novamente</string>
    <string name="menu_item_profile">Perfil</string>
    <string name="menu_item_favorites">Favoritos</string>
    <string name="menu_item_vacancies">Vagas</string>
    <string name="error_field_invalid">O campo é inválido</string>
    <string name="error_field_invalid_length">Número inválido de caracteres</string>
    <string name="error_connection">Não foi possível conectar-se com o servidor. Por favor, verifique sua conexão ou tente novamente mais tarde.</string>
    <string name="tools_vacancyItem_name">Motorista Solidário para Um mundo melhor e sem problemassd as dsadas dasd sa das dasd sa das das das das das  dasd </string>
    <string name="tools_vacancyItem_organizationName">CAPEC</string>
    <string name="tools_vacancyItem_location">Belo Horizonte - MG</string>
    <string name="tools_vacancyItem_frequency">Recorrente</string>
    <string name="tools_causeItem_name">Animais</string>
    <string name="tools_skillItem_name">Artes e Cultura</string>
    <string name="tools_vacanciesFilterLayout_selectedCauses">Animais, Arte e Cultura, Combate à Pobreza</string>
    <string name="tools_loremIpsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et massa vestibulum magna tempus porta. Ut in sollicitudin nunc, vitae consequat velit. Etiam sodales, eros vitae aliquam pulvinar, mauris nulla lobortis leo, in fringilla massa sem convallis tellus. Nunc aliquet feugiat pulvinar. Sed faucibus odio orci, et luctus dolor volutpat ut. Maecenas sit amet urna feugiat, accumsan mi finibus, pulvinar velit. Fusce finibus eros a justo mattis porta in vitae ligula. Phasellus malesuada tellus in orci iaculis dapibus. Maecenas non ornare turpis.</string>
    <string name="tools_15">15</string>
    <string name="tools_user_name">Maria da Silva</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="orderBy_array">
        <item>@string/vacancies_btn_recommended</item>
        <item>@string/vacancies_btn_popular</item>
        <item>@string/vacancies_btn_recent</item>
    </string-array>
    <string name="title_activity_organizations_details">ScrollingActivity</string>
</resources>