<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="#FFFFFF"
        android:fitsSystemWindows="true"
        tools:showIn="@layout/fragment_vacancies">


        <TextView
            android:id="@+id/vacancies_tv_orderBy"
            style="@style/itemTitle_textView_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/vacancies_tv_orderBy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/vacancies_btn_recommended"
            style="@style/small_outlined_button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/vacancies_btn_recommended"
            app:layout_constraintEnd_toStartOf="@+id/vacancies_btn_popular"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vacancies_tv_orderBy" />

        <Button
            android:id="@+id/vacancies_btn_popular"
            style="@style/small_outlined_button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/vacancies_btn_popular"
            app:layout_constraintEnd_toStartOf="@+id/vacancies_btn_recent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/vacancies_btn_recommended"
            app:layout_constraintTop_toTopOf="@id/vacancies_btn_recommended" />

        <Button
            android:id="@+id/vacancies_btn_recent"
            style="@style/small_outlined_button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/vacancies_btn_recent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/vacancies_btn_popular"
            app:layout_constraintTop_toTopOf="@id/vacancies_btn_recommended" />

        <TextView
            android:id="@+id/vacancies_tv_FilterBy"
            style="@style/itemTitle_textView_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/vacancies_tv_filterBy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vacancies_btn_recommended" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>