<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/vacanciesFragment">

    <fragment
        android:id="@+id/vacanciesFragment"
        android:name="com.br.queroajudar.vacancies.VacanciesFragment"
        android:label="@string/fragment_vacancies_label"
        tools:layout="@layout/fragment_vacancies" >
        <action
            android:id="@+id/action_vacanciesFragment_to_vacancyDetailsFragment"
            app:destination="@id/vacancyDetailsFragment"
            app:enterAnim="@anim/slide_in_down"
            app:exitAnim="@anim/slide_out_up"
            app:popEnterAnim="@anim/slide_in_up"
            app:popExitAnim="@anim/slide_out_down" />
        <action
            android:id="@+id/action_vacanciesFragment_to_organizationDetailsFragment"
            app:destination="@id/organizationDetailsFragment"
            app:enterAnim="@anim/slide_in_down"
            app:exitAnim="@anim/slide_out_up"
            app:popEnterAnim="@anim/slide_in_up"
            app:popExitAnim="@anim/slide_out_down"/>
    </fragment>
    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.br.queroajudar.favorites.FavoritesFragment"
        android:label="@string/fragment_favorites_label"
        tools:layout="@layout/fragment_favorites" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.br.queroajudar.profile.ProfileFragment"
        android:label="@string/fragment_profile_label"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_profileFragment_to_registerFragment"
            app:destination="@id/registerFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>
    <fragment
        android:id="@+id/vacancyDetailsFragment"
        android:name="com.br.queroajudar.vacancydetails.VacancyDetailsFragment"
        android:label="@string/fragment_vacancy_details_label"
        tools:layout="@layout/fragment_vacancy_details">
        <argument
            android:name="id"
            app:argType="integer" />
        <action
            android:id="@+id/action_vacancyDetailsFragment_to_organizationDetailsFragment"
            app:destination="@id/organizationDetailsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_vacancyDetailsFragment_to_vacancyApplicationFragment"
            app:destination="@id/vacancyApplicationFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/organizationDetailsFragment"
        android:name="com.br.queroajudar.organizationdetails.OrganizationDetailsFragment"
        android:label="@string/fragment_organization_details_label"
        tools:layout="@layout/fragment_organization_details">
        <argument
            android:name="id"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/favoriteVacanciesFragment"
        android:name="com.br.queroajudar.favorites.FavoriteVacanciesFragment"
        android:label="FavoriteVacanciesFragment"
        tools:layout="@layout/fragment_favorite_vacancies">
        <action
            android:id="@+id/action_favoriteVacanciesFragment_to_vacancyDetailsFragment"
            app:destination="@id/vacancyDetailsFragment"
            app:enterAnim="@anim/slide_in_down"
            app:exitAnim="@anim/slide_out_up"
            app:popEnterAnim="@anim/slide_in_up"
            app:popExitAnim="@anim/slide_out_down"/>
        <action
            android:id="@+id/action_favoriteVacanciesFragment_to_organizationDetailsFragment"
            app:destination="@id/organizationDetailsFragment"
            app:enterAnim="@anim/slide_in_down"
            app:exitAnim="@anim/slide_out_up"
            app:popEnterAnim="@anim/slide_in_up"
            app:popExitAnim="@anim/slide_out_down"/>
    </fragment>
    <fragment
        android:id="@+id/favoriteOrganizationsFragment"
        android:name="com.br.queroajudar.favorites.FavoriteOrganizationsFragment"
        android:label="FavoriteOrganizationsFragment"
        tools:layout="@layout/fragment_favorite_organizations">
        <action
            android:id="@+id/action_favoriteOrganizationsFragment_to_organizationDetailsFragment"
            app:destination="@id/organizationDetailsFragment"
            app:enterAnim="@anim/slide_in_down"
            app:exitAnim="@anim/slide_out_up"
            app:popEnterAnim="@anim/slide_in_up"
            app:popExitAnim="@anim/slide_out_down"
            />
    </fragment>
    <fragment
        android:id="@+id/vacancyApplicationFragment"
        android:name="com.br.queroajudar.vacancyapplication.VacancyApplicationFragment"
        android:label="@string/fragment_vacancy_application_label"
        tools:layout="@layout/fragment_vacancy_application">
        <action
            android:id="@+id/action_vacancyApplicationFragment_to_vacancyDetailsFragment"
            app:destination="@id/vacancyDetailsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/vacanciesFragment" />
        <argument
            android:name="vacancy"
            app:argType="com.br.queroajudar.data.Vacancy" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.br.queroajudar.register.RegisterFragment"
        android:label="@string/fragment_register_edit_profile_label"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_registerFragment_to_profileFragment"
            app:destination="@id/profileFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left"/>
        <argument
            android:name="user"
            app:argType="com.br.queroajudar.data.User"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>
</navigation>